Btn alignment fixed

--- a/style.css
+++ b/style.css
@@ -22,7 +22,10 @@ body {
   box-shadow: 0 10px 25px rgba(0, 0, 0, 0.7);
   display: block;
 }
-
+.main-btn-box{
+  display: flex;
+  justify-content: center;
+}
 .container h1 {
   margin-bottom: 1rem;
   color: #f0f0f0;
